wrong email ~ my bad

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Email Us</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="mailto:support@realmblock.me" class="text-primary">support@realmblock.me</a></p>
+                            <a href="mailto:support@realmblockstudio.me" class="text-primary">support@realmblockstudio.me</a></p>
                     </div>
                 </div>
             </div>
