Updated Footer Links
Points to Twitter Profiles instead of Github (Liability Issues)

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Email Us</strong></h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="mailto:support@realmblockstudio.me" class="text-primary">support@realmblockstudio.me</a></p>
+                            <a href="mailto:support@realmblock.me" class="text-primary">support@realmblock.me</a></p>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"><strong>Realmblock Studio</strong> by <a href="https://github.com/HooferDevelops" class="text-primary" target="_blank">Hoofer&nbsp;</a>&amp; Ryan. Site developed by <a href="https://github.com/NovalFuzzy" class="text-primary" target="_blank">NovalFuzzy</a>.<br></p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"><strong>Realmblock Studio</strong> by <a href="https://twitter.com/leHoofer" class="text-primary" target="_blank">Hoofer&nbsp;</a>&amp; Ryan. Site developed by <a href="https://twitter.com/NovalFuzzy" class="text-primary" target="_blank">NovalFuzzy</a>.<br></p>
             </div>
         </div>
     </div>
