--- a/wizardheroes.html
+++ b/wizardheroes.html
@@ -180,7 +180,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"><strong>Realmblock Studio</strong> by <a href="https://github.com/HooferDevelops" class="text-primary" target="_blank">Hoofer&nbsp;</a>&amp; Ryan. Site developed by <a href="https://github.com/NovalFuzzy" class="text-primary" target="_blank">NovalFuzzy</a>.<br></p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"><strong>Realmblock Studio</strong> by <a href="https://twitter.com/leHoofer" class="text-primary" target="_blank">Hoofer&nbsp;</a>&amp; Ryan. Site developed by <a href="https://twitter.com/NovalFuzzy" class="text-primary" target="_blank">NovalFuzzy</a>.<br></p>
             </div>
         </div>
     </div>
