--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html#header11-s">
+                    <a href="index#header11-s">
                         <img src="assets/images/a6d613cc88ccdaad4d6011cbd037b4a1.webp" alt="Mobirise" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html#header11-s">Realmblock Studios</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index#header11-s">Realmblock Studios</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -58,8 +58,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
-                            Our Games</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="wizardheroes.html#video4-j">Wizard Heroes!</a><a class="text-black dropdown-item text-primary display-4" href="rocketgame.html#video4-p" aria-expanded="false">Rocket Game</a></div></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html#contacts2-v">Contact Us</a>
+                            Our Games</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="wizardheroes#video4-j">Wizard Heroes!</a><a class="text-black dropdown-item text-primary display-4" href="rocketgame#video4-p" aria-expanded="false">Rocket Game</a></div></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact#contacts2-v">Contact Us</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RealmblockS" target="_blank">
@@ -92,7 +92,7 @@
                         <strong>Realmblock Studios</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">
                         We make games.</p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-black display-7" href="index.html#content1-7">View Our Projects!</a></div>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-black display-7" href="index#content1-7">View Our Projects!</a></div>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>"Wizard Heroes!" </strong>is a 2D MMORPG with so much to come!&nbsp;</h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Fight off enemies in dungeons and even play with friends! Currency, trading, spells, power-ups, and so much more!<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="wizardheroes.html#video4-j" class="btn btn-primary item-btn display-7">View this project!</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="wizardheroes#video4-j" class="btn btn-primary item-btn display-7">View this project!</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-6">
@@ -131,7 +131,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>"Rocket Game"</strong> is a puzzle-based game built around flying a complicated rocket!</h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">In Rocket Game, you use a low-poly rocket to traverse through structured levels that will sometimes rely on your environment...</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="rocketgame.html#video4-p" class="btn btn-primary item-btn display-7">View this project!</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="rocketgame#video4-p" class="btn btn-primary item-btn display-7">View this project!</a></div>
                 </div>
             </div>
 
