--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html#header11-s">
+                    <a href="index#header11-s">
                         <img src="assets/images/a6d613cc88ccdaad4d6011cbd037b4a1.webp" alt="Mobirise" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html#header11-s">Realmblock Studios</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index#header11-s">Realmblock Studios</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -59,8 +59,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
-                            Our Games</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="wizardheroes.html#video4-j">Wizard Heroes!</a><a class="text-black dropdown-item text-primary display-4" href="rocketgame.html#video4-p" aria-expanded="false">Rocket Game</a></div></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html#contacts2-v">Contact Us</a>
+                            Our Games</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="wizardheroes#video4-j">Wizard Heroes!</a><a class="text-black dropdown-item text-primary display-4" href="rocketgame#video4-p" aria-expanded="false">Rocket Game</a></div></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact#contacts2-v">Contact Us</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://twitter.com/RealmblockS" target="_blank">
